--- a/css/styles.css
+++ b/css/styles.css
@@ -51,24 +51,46 @@ header {
 }
 
   #social a {
+    background-size: 42px 42px;
+    background-position: -1px 0;
     border-radius: 100%;
     border: 2px solid #3d4650;
     display: inline-block;
     font-size: 0;
-    height: 36px;
+    height: 40px;
     margin: 0 10px;
     transition: border 0.3s;
-    width: 36px;
+    width: 40px;
   }
 
     #social a:hover {
       border-color: #000;
     }
 
+    #twitter {
+      background: url(../img/twitter@2x.png) no-repeat;
+    }
+
+    #dribbble {
+      background: url(../img/dribbble@2x.png) no-repeat;
+    }
+
+    #linkedin {
+      background: url(../img/linkedin@2x.png) no-repeat;
+    }
+
+    #gplus {
+      background: url(../img/gplus@2x.png) no-repeat;
+    }
+
+    #github {
+      background: url(../img/github@2x.png) no-repeat;
+    }
+
 #hero {
+  background: #c3c3c3 url(../img/hero.jpg) no-repeat;
   background-position: center bottom;
   background-size: cover;
-  background: #c3c3c3 url(../img/hero.jpg) no-repeat;
   padding: 6em 0;
   text-align: center;
 }
@@ -114,6 +136,7 @@ header {
     .shot span {
       background: rgba(0, 0, 0, 0.25);
       bottom: 0;
+      color: #fff;
       left: 0;
       padding: 10px 0;
       position: absolute;
