Portfolio grid updated.

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ h2 {
   font-size: 2.75em;
   font-weight: 300;
   line-height: 1.5em;
+  text-shadow: 0 1px 0 #a5a796;
 }
 
 h3 {
@@ -88,15 +89,19 @@ header {
       background: url(../img/github@2x.png) no-repeat;
     }
 
-#hero {
+#image {
   background: #c3c3c3 url(../img/hero.jpg) no-repeat;
   background-position: center bottom;
   background-size: cover;
+}
+
+#hero {
   padding: 6em 0;
   text-align: center;
 }
 
 #about {
+  background: rgba(255, 255, 255, 0.9);
   padding: 1em;
 }
 
@@ -116,15 +121,10 @@ header {
   }
 
   .shot {
-    background: #fff;
-    border-radius: 4px;
     border: 0;
     display: inline-block;
     height: auto;
-    margin: 1em;
-    max-width: 300px;
-    overflow: hidden;
-    padding: 5px;
+    max-width: 250px;
     position: relative;
     width: 100%;
   }
@@ -136,7 +136,7 @@ header {
 
     .shot span {
       background: rgba(0, 0, 0, 0.3);
-      bottom: 0;
+      bottom: 3px;
       color: #fff;
       left: 0;
       padding: 10px 0;
@@ -166,7 +166,11 @@ footer {
   }
 
   #contact {
-    margin: 2em;
+    background: #3f4f54;
+    border-radius: 2em;
+    margin: 2em auto;
+    padding: 1em;
+    width: 300px;
   }
 
   #copyright {
