--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ h1, h2, h3 {
 h1 {
   color: #3d4650;
   font: 2em 'Roboto Condensed', sans-serif;
-  padding: 0.7em;
+  padding: 0.7em 0.5em 0.25em;
   text-transform: uppercase;
 }
 
@@ -35,11 +35,22 @@ h3 {
   font-weight: 300;
 }
 
+h4 {
+  color: #3d4650;
+  font-weight: 300;
+  padding-bottom: 0.5em;
+}
+
 a {
   border-bottom: 1px dotted #777;
   color: #000;
   text-decoration: none;
+  transition: border 0.2s;
 }
+
+  a:hover {
+    border-color: #a4c4d4;
+  }
 
 .container {
   margin: auto;
@@ -71,22 +82,32 @@ header {
 
     #twitter {
       background: url(../img/twitter@2x.png) no-repeat;
+      animation: fadeInUp 0.25s;
+      -webkit-animation: fadeInUp 0.25s;
     }
 
     #dribbble {
       background: url(../img/dribbble@2x.png) no-repeat;
+      animation: fadeInUp 0.35s;
+      -webkit-animation: fadeInUp 0.35s;
     }
 
     #linkedin {
       background: url(../img/linkedin@2x.png) no-repeat;
+      animation: fadeInUp 0.47s;
+      -webkit-animation: fadeInUp 0.47s;
     }
 
     #gplus {
       background: url(../img/gplus@2x.png) no-repeat;
+      animation: fadeInUp 0.6s;
+      -webkit-animation: fadeInUp 0.6s;
     }
 
     #github {
       background: url(../img/github@2x.png) no-repeat;
+      animation: fadeInUp 0.65s;
+      -webkit-animation: fadeInUp 0.65s;
     }
 
 #image {
@@ -118,16 +139,29 @@ header {
 
   #portfolio h3 {
     color: #fff;
+    padding-bottom: 0.5em;
+  }
+
+  #portfolio .container {
+    padding-bottom: 1.5em;
   }
 
   .shot {
     border: 0;
     display: inline-block;
     height: auto;
+    margin: 0.25em;
     max-width: 250px;
+    opacity: 0.7;
+    overflow: hidden;
     position: relative;
+    transition: all 0.3s;
     width: 100%;
   }
+
+    .shot:hover {
+      opacity: 1;
+    }
 
     .shot img {
       height: auto;
@@ -135,24 +169,25 @@ header {
     }
 
     .shot span {
-      background: rgba(0, 0, 0, 0.3);
-      bottom: 3px;
+      background: rgba(0, 0, 0, 0.45);
+      bottom: -3.5em;
       color: #fff;
+      font-size: 0.8em;
       left: 0;
       padding: 10px 0;
       position: absolute;
-      transition: all 0.1s ease-in;
+      transition: all 0.15s ease-in;
       width: 100%;
     }
 
       .shot:hover span {
-        padding: 15px 0;
+        bottom: 3px;
       }
 
 footer {
   background: #2d393d;
   color: #fff;
-  padding: 1em;
+  padding: 2em 1em;
   text-align: center;
 }
 
@@ -162,8 +197,14 @@ footer {
 
   #top {
     border: 0;
+    line-height: 0.3em;
     font-size: 0.8em;
   }
+
+    #top::before {
+      content: '^';
+      display: block;
+    }
 
   #contact {
     background: #3f4f54;
@@ -178,3 +219,13 @@ footer {
     font-size: 0.8em;
     margin: 0;
   }
+
+@keyframes fadeInUp {
+  0% { transform: translateY(50px); opacity: 0; }
+  100% { transform: translateY(0); opacity: 1; }
+}
+
+@-webkit-keyframes fadeInUp {
+  0% { -webkit-transform: translateY(50px); opacity: 0; }
+  100% { -webkit-transform: translateY(0); opacity: 1; }
+}
