--- a/css/styles.css
+++ b/css/styles.css
@@ -68,16 +68,17 @@ header {
     background-position: -1px 0;
     border-radius: 100%;
     border: 2px solid #3d4650;
+    /*box-shadow: 0 0 0 2px #3d4650;*/
     display: inline-block;
     font-size: 0;
     height: 40px;
     margin: 0 10px;
-    transition: all 0.3s;
+    transition: all 0.3s ;
     width: 40px;
   }
 
     #social a:hover {
-      box-shadow: 0 0 0 1px #3d4650;
+      box-shadow: 0 0 0 2px #3d4650;
     }
 
     #twitter {
@@ -169,7 +170,7 @@ header {
     }
 
     .shot span {
-      background: rgba(0, 0, 0, 0.45);
+      background: rgba(0, 0, 0, 0.55);
       bottom: -3.5em;
       color: #fff;
       font-size: 0.8em;
@@ -221,11 +222,11 @@ footer {
   }
 
 @keyframes fadeInUp {
-  0% { transform: translateY(50px); opacity: 0; }
+  0% { transform: translateY(30px); opacity: 0; }
   100% { transform: translateY(0); opacity: 1; }
 }
 
 @-webkit-keyframes fadeInUp {
-  0% { -webkit-transform: translateY(50px); opacity: 0; }
+  0% { -webkit-transform: translateY(30px); opacity: 0; }
   100% { -webkit-transform: translateY(0); opacity: 1; }
 }
