--- a/css/styles.css
+++ b/css/styles.css
@@ -1,47 +1,63 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300);
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:300,100);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,200);
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 body,
 html {
   background: #fff;
-  font: 1em/1.2em "Roboto Slab", Helvetica, Arial, sans-serif;
+  font: 1em/1.2em Raleway, Helvetica, Arial, sans-serif;
   height: 100%;
-  margin: 0;
   min-width: 395px;
-  padding: 0;
   width: 100%;
 }
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   text-align: center;
 }
 
 h1 {
   color: #3d4650;
-  font: 2em "Roboto Condensed", sans-serif;
-  padding: .7em .5em .25em;
+  font: 2.2em "Roboto Condensed", sans-serif;
+  padding: 1.7em .5em .8em;
   text-transform: uppercase;
 }
 
 h2 {
+  background: linear-gradient(#fff,#eee);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   color: #fff;
   font-size: 2.75em;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.5em;
-  text-shadow: 0 1px 0 #a5a796;
+  padding: 1em;
 }
 
 h3 {
   font-size: 1.5em;
-  font-weight: 300;
+  font-weight: 400;
+  padding: 1em;
 }
 
 h4 {
   color: #3d4650;
-  font-weight: 300;
-  padding-bottom: .5em;
+  font-weight: 400;
+  padding-bottom: 2.9em;
+  text-transform: uppercase;
+}
+
+h5 {
+  font: 1em "Roboto Condensed", sans-serif;
+  text-transform: uppercase;
+  padding: 1.25em;
 }
 
 a {
@@ -61,6 +77,35 @@ a {
   width: 80%;
 }
 
+nav {
+  background: rgba(45,57,61,.65);
+  color: #fff;
+  height: 4em;
+  position: fixed;
+  top: -10em;
+  transition: all .45s ease-in-out;
+  width: 100%;
+}
+
+  .sticky {
+    border-bottom: 2px solid rgba(255,255,255,.3);
+    top: 0;
+    z-index: 2;
+  }
+
+  #nav-contact {
+    position: absolute;
+    top: 1.25em;
+    right: 1.25em;
+  }
+
+  #nav-contact a {
+    border: 0;
+    color: #fff;
+    font: 1em "Roboto Condensed", sans-serif;
+    margin-left: 1.25em;
+  }
+
 header {
   padding-bottom: 4em;
   text-align: center;
@@ -70,17 +115,18 @@ header {
     background-size: 42px 42px;
     background-position: -1px 0;
     border-radius: 100%;
-    border: 2px solid #3d4650;
+    border: 0;
+    box-shadow: 0 0 0 2px #3d4650;
     display: inline-block;
     font-size: 0;
     height: 40px;
-    margin: 0 10px;
-    transition: all .3s;
+    margin: 0 15px;
+    transition: all .1s ease-in-out;
     width: 40px;
   }
 
     #social a:hover {
-      box-shadow: 0 0 0 2px #3d4650;
+      box-shadow: 0 0 0 4px #3d4650;
     }
 
     #twitter {
@@ -113,13 +159,10 @@ header {
       -webkit-animation: fadeInUp .65s;
     }
 
-#image {
+#hero {
   background: #c3c3c3 url(../img/hero.jpg) no-repeat;
   background-position: center bottom;
   background-size: cover;
-}
-
-#hero {
   padding: 6em 0;
   text-align: center;
 }
@@ -133,6 +176,7 @@ header {
   #about p {
     font-size: 1.1em;
     line-height: 1.9em;
+    margin-bottom: 1em;
   }
 
 #portfolio {
@@ -147,7 +191,7 @@ header {
   }
 
   #portfolio .container {
-    padding-bottom: 1.5em;
+    padding: 1.5em 0;
   }
 
   .shot {
@@ -173,10 +217,10 @@ header {
     }
 
     .shot span {
-      background: rgba(0,0,0,.55);
+      background: rgba(0,0,0,.5);
       bottom: -3.5em;
       color: #fff;
-      font-size: 0.8em;
+      font-size: 0.85em;
       left: 0;
       padding: 10px 0;
       position: absolute;
@@ -203,17 +247,17 @@ footer {
     border: 0;
     cursor: pointer;
     line-height: 0.3em;
-    font-size: 0.8em;
+    font-size: 1.2em;
   }
 
-    #top::before {
-      content: "^";
-      display: block;
+    #top:hover {
+      color: #a4c4d4;
     }
 
   #contact {
     background: #3f4f54;
     border-radius: 2em;
+    font-size: 0.95em;
     margin: 2em auto;
     padding: 1em;
     width: 300px;
