--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,11 @@ h1 {
 }
 
 h2 {
+  color: #fff;
   background: linear-gradient(#fff,#eee);
+  background-size: cover;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  color: #fff;
   font-size: 2.75em;
   font-weight: 400;
   line-height: 1.5em;
@@ -174,6 +175,7 @@ header {
 }
 
   #about p {
+    color: #233843;
     font-size: 1.1em;
     line-height: 1.9em;
     margin-bottom: 1em;
@@ -231,6 +233,25 @@ header {
       .shot:hover span {
         bottom: 3px;
       }
+
+#twitter-feed {
+  background: #72a4bc;
+  padding: 1em 1em 2em 1em;
+  text-align: center;
+}
+
+  #twitter-feed h3 {
+    color: #fff;
+  }
+
+  #latest ul {
+    list-style: none;
+    padding: 1em;
+  }
+
+  #tweet-author {
+    border: 0;
+  }
 
 footer {
   background: #2d393d;
