--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@ html {
   background: #fff;
   font: 1em/1.2em Raleway, Helvetica, Arial, sans-serif;
   height: 100%;
-  min-width: 395px;
   width: 100%;
 }
 
@@ -24,22 +23,16 @@ h4 {
 }
 
 h1 {
-  color: #3d4650;
   font: 2.2em "Roboto Condensed", sans-serif;
   padding: 1.7em .5em .8em;
   text-transform: uppercase;
 }
 
 h2 {
-  color: #fff;
-  background: linear-gradient(#fff,#eee);
-  background-size: cover;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 2.75em;
+  font-size: 1em;
   font-weight: 400;
-  line-height: 1.5em;
-  padding: 1em;
+  padding-bottom: 2.9em;
+  text-transform: uppercase;
 }
 
 h3 {
@@ -48,17 +41,22 @@ h3 {
   padding: 1em;
 }
 
-h4 {
-  color: #3d4650;
-  font-weight: 400;
-  padding-bottom: 2.9em;
-  text-transform: uppercase;
-}
-
 h5 {
   font: 1em "Roboto Condensed", sans-serif;
   text-transform: uppercase;
   padding: 1.25em;
+}
+
+h4 {
+  color: #fff;
+  background: linear-gradient(#000,#bbb);
+  background-size: cover;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 2.75em;
+  font-weight: 200;
+  line-height: 1.5em;
+  padding: 1em;
 }
 
 a {
@@ -108,65 +106,70 @@ nav {
   }
 
 header {
+  background: #c3c3c3 url(../img/hero.jpg) no-repeat;
+  background-position: center center;
+  background-size: cover;
+  color: #fff;
+  display: table;
+  height: 100%;
+  margin: 0 auto;
+  overflow: hidden;
   padding-bottom: 4em;
   text-align: center;
+  width: 100%;
 }
 
-  #social a {
-    background-size: 42px 42px;
-    background-position: -1px 0;
-    border-radius: 100%;
-    border: 0;
-    box-shadow: 0 0 0 2px #3d4650;
-    display: inline-block;
-    font-size: 0;
-    height: 40px;
-    margin: 0 15px;
-    transition: all .1s ease-in-out;
-    width: 40px;
+  #header-container {
+    display: table-cell;
+    vertical-align: middle;
   }
 
-    #social a:hover {
-      box-shadow: 0 0 0 4px #3d4650;
+  #social a {
+    border: 0;
+    color: #fff;
+    display: inline-block;
+    font-size: 0.825em;
+    margin: 0 15px;
+    padding: 7px 0;
+    position: relative;
+    text-transform: uppercase;
+    transition: all .1s ease-in-out;
+    width: 100px;
+  }
+
+    #social a::before {
+      top: 0;
+      -webkit-transform: translateY(-10px);
+      -moz-transform: translateY(-10px);
+      transform: translateY(-10px);
     }
 
-    #twitter {
-      background: url(../img/twitter@2x.png) no-repeat;
-      animation: fadeInUp .25s;
-      -webkit-animation: fadeInUp .25s;
+    #social a::after {
+      bottom: 0;
+      -webkit-transform: translateY(10px);
+      -moz-transform: translateY(10px);
+      transform: translateY(10px);
     }
 
-    #dribbble {
-      background: url(../img/dribbble@2x.png) no-repeat;
-      animation: fadeInUp .35s;
-      -webkit-animation: fadeInUp .35s;
+    #social a::before, #social a::after {
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background: #fff;
+      content: '';
+      opacity: 0;
+      -webkit-transition: opacity .3s, -webkit-transform .3s;
+      -moz-transition: opacity .3s, -moz-transform .3s;
+      transition: opacity .3s, transform .3s;
     }
 
-    #linkedin {
-      background: url(../img/linkedin@2x.png) no-repeat;
-      animation: fadeInUp .47s;
-      -webkit-animation: fadeInUp .47s;
+    #social a:hover::before, #social a:hover::after {
+      opacity: 1;
+      -webkit-transform: translateY(0);
+      -moz-transform: translateY(0);
+      transform: translateY(0);
     }
-
-    #gplus {
-      background: url(../img/gplus@2x.png) no-repeat;
-      animation: fadeInUp .6s;
-      -webkit-animation: fadeInUp .6s;
-    }
-
-    #github {
-      background: url(../img/github@2x.png) no-repeat;
-      animation: fadeInUp .65s;
-      -webkit-animation: fadeInUp .65s;
-    }
-
-#hero {
-  background: #c3c3c3 url(../img/hero.jpg) no-repeat;
-  background-position: center bottom;
-  background-size: cover;
-  padding: 6em 0;
-  text-align: center;
-}
 
 #about {
   background: rgba(255,255,255,.9);
@@ -233,25 +236,6 @@ header {
       .shot:hover span {
         bottom: 3px;
       }
-
-#twitter-feed {
-  background: #72a4bc;
-  padding: 1em 1em 2em 1em;
-  text-align: center;
-}
-
-  #twitter-feed h3 {
-    color: #fff;
-  }
-
-  #latest ul {
-    list-style: none;
-    padding: 1em;
-  }
-
-  #tweet-author {
-    border: 0;
-  }
 
 footer {
   background: #2d393d;
