--- a/css/styles.css
+++ b/css/styles.css
@@ -63,47 +63,29 @@ a {
   border-bottom: 1px dotted #777;
   color: #000;
   text-decoration: none;
-  transition: border .2s;
+  transition: all .2s;
 }
 
   a:hover {
     border-color: #a4c4d4;
   }
 
+.more {
+  border-radius: 100%;
+  cursor: pointer;
+  display: block;
+  font-weight: 200;
+  height: 30px;
+  margin: 0 auto;
+  padding-top: 3px;
+  width: 30px;
+}
+
 .container {
   margin: auto;
   max-width: 800px;
   width: 80%;
 }
-
-nav {
-  background: rgba(45,57,61,.65);
-  color: #fff;
-  height: 4em;
-  position: fixed;
-  top: -10em;
-  transition: all .45s ease-in-out;
-  width: 100%;
-}
-
-  .sticky {
-    border-bottom: 2px solid rgba(255,255,255,.3);
-    top: 0;
-    z-index: 2;
-  }
-
-  #nav-contact {
-    position: absolute;
-    top: 1.25em;
-    right: 1.25em;
-  }
-
-  #nav-contact a {
-    border: 0;
-    color: #fff;
-    font: 1em "Roboto Condensed", sans-serif;
-    margin-left: 1.25em;
-  }
 
 header {
   background: #c3c3c3 url(../img/hero.jpg) no-repeat;
@@ -124,7 +106,7 @@ header {
     vertical-align: middle;
   }
 
-  #social a {
+  #header-social a {
     border: 0;
     color: #fff;
     display: inline-block;
@@ -136,28 +118,28 @@ header {
     width: 110px;
   }
 
-  @media only screen and (max-width: 650px) {
-    #social a {
-      margin: 10px auto;
-      display: block;
+    @media only screen and (max-width: 650px) {
+      #header-social a {
+        margin: 10px auto;
+        display: block;
+      }
     }
-  }
 
-    #social a::before {
+    #header-social a::before {
       top: 0;
       -webkit-transform: translateY(-10px);
       -moz-transform: translateY(-10px);
       transform: translateY(-10px);
     }
 
-    #social a::after {
+    #header-social a::after {
       bottom: 0;
       -webkit-transform: translateY(10px);
       -moz-transform: translateY(10px);
       transform: translateY(10px);
     }
 
-    #social a::before, #social a::after {
+    #header-social a::before, #header-social a::after {
       background: #fff;
       content: '';
       height: 1px;
@@ -170,11 +152,25 @@ header {
       width: 100%;
     }
 
-    #social a:hover::before, #social a:hover::after {
+    #header-social a:hover::before, #header-social a:hover::after {
       opacity: 1;
       -webkit-transform: translateY(0);
       -moz-transform: translateY(0);
       transform: translateY(0);
+    }
+
+  #header-more {
+    border: 1px solid #bccad3;
+    bottom: 1.5em;
+    color: #bccad3;
+    left: 50%;
+    margin-left: -15px;
+    position: absolute;
+  }
+
+    #header-more:hover {
+      border-color: #fff;
+      color: #fff;
     }
 
 #about {
@@ -254,18 +250,18 @@ footer {
     color: #fff;
   }
 
-  #top {
-    border: 0;
+  #footer-top {
+    border: 1px solid #737b7d;
+    color: #737b7d;
     cursor: pointer;
-    line-height: 0.3em;
-    font-size: 1.2em;
   }
 
-    #top:hover {
-      color: #a4c4d4;
+    #footer-top:hover {
+      border-color: #fff;
+      color: #fff;
     }
 
-  #contact {
+  #footer-contact {
     background: #3f4f54;
     border-radius: 2em;
     font-size: 0.95em;
@@ -274,7 +270,7 @@ footer {
     max-width: 300px;
   }
 
-  #copyright {
+  #footer-copyright {
     color: #737b7d;
     font-size: 0.8em;
     margin: 0;
