--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,10 @@ header {
       color: #fff;
     }
 
+.404 header {
+  background-image: none;
+}
+
 #about {
   background: rgba(255,255,255,.9);
   padding: 1em 1em 3em 1em;
@@ -232,8 +236,8 @@ header {
     }
 
     .shot span {
-      background: rgba(0,0,0,.5);
-      bottom: -3.5em;
+      background: rgba(0,0,0,.6);
+      bottom: -4.5em;
       color: #fff;
       font-size: 0.85em;
       left: 0;
@@ -242,6 +246,10 @@ header {
       transition: all 0.15s ease-in;
       width: 100%;
     }
+
+      .shot span p:nth-child(2) {
+        font-size: 0.9em;
+      }
 
       .shot:hover span {
         bottom: 3px;
