--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,9 @@ a {
   border-bottom: 1px dotted #777;
   color: #000;
   text-decoration: none;
-  transition: all .2s;
+  -webkit-transition: all .2s;
+     -moz-transition: all .2s;
+          transition: all .2s;
 }
 
   a:hover {
@@ -109,12 +111,14 @@ a {
 
   #header__container__titles {
     -webkit-animation: shiftUp .5s ease-out;
-    animation: shiftUp .5s ease-out;
+       -moz-animation: shiftUp .5s ease-out;
+            animation: shiftUp .5s ease-out;
   }
 
   #header__social {
     -webkit-animation: shiftDown .5s ease-out;
-    animation: shiftDown .5s ease-out;
+       -moz-animation: shiftDown .5s ease-out;
+            animation: shiftDown .5s ease-out;
   }
 
   .header__social__link {
@@ -125,7 +129,9 @@ a {
     padding: 7px 0;
     position: relative;
     text-transform: uppercase;
-    transition: all .1s ease-in-out;
+    -webkit-transition: all .15s ease-in-out;
+       -moz-transition: all .15s ease-in-out;
+            transition: all .15s ease-in-out;
     width: 110px;
   }
 
@@ -139,15 +145,15 @@ a {
     .header__social__link::before {
       top: 0;
       -webkit-transform: translateY(-10px);
-      -moz-transform: translateY(-10px);
-      transform: translateY(-10px);
+         -moz-transform: translateY(-10px);
+              transform: translateY(-10px);
     }
 
     .header__social__link::after {
       bottom: 0;
       -webkit-transform: translateY(10px);
-      -moz-transform: translateY(10px);
-      transform: translateY(10px);
+         -moz-transform: translateY(10px);
+              transform: translateY(10px);
     }
 
     .header__social__link::before,
@@ -159,8 +165,8 @@ a {
       opacity: 0;
       position: absolute;
       -webkit-transition: opacity .3s, -webkit-transform .3s;
-      -moz-transition: opacity .3s, -moz-transform .3s;
-      transition: opacity .3s, transform .3s;
+         -moz-transition: opacity .3s, -moz-transform .3s;
+              transition: opacity .3s, transform .3s;
       width: 100%;
     }
 
@@ -168,8 +174,8 @@ a {
     .header__social__link:hover::after {
       opacity: 1;
       -webkit-transform: translateY(0);
-      -moz-transform: translateY(0);
-      transform: translateY(0);
+         -moz-transform: translateY(0);
+              transform: translateY(0);
     }
 
   #header__more {
@@ -179,6 +185,9 @@ a {
     left: 50%;
     margin-left: -15px;
     position: absolute;
+    -webkit-animation: shiftDown .5s ease .5s;
+       -moz-animation: shiftDown .5s ease .5s;
+            animation: shiftDown .5s ease .5s;
   }
 
     #header__more:hover {
@@ -227,7 +236,9 @@ a {
     opacity: 0.7;
     overflow: hidden;
     position: relative;
-    transition: all .3s;
+    -webkit-transition: all .3s;
+       -moz-transition: all .3s;
+            transition: all .3s;
     width: 100%;
   }
 
@@ -248,7 +259,9 @@ a {
       left: 0;
       padding: 10px 0;
       position: absolute;
-      transition: all 0.15s ease-in;
+      -webkit-transition: all .15s ease-in;
+         -moz-transition: all .15s ease-in;
+              transition: all .15s ease-in;
       width: 100%;
     }
 
@@ -298,37 +311,31 @@ a {
   }
 
 @keyframes shiftUp {
-  from {
-    transform: translateY(60px);
-  }
-  to {
-    transform: translateY(0px);
-  }
+  0%   { opacity: 0; transform: translateY(60px); }
+  100% { opacity: 1; transform: translateY(0px); }
+}
+
+@-moz-keyframes shiftUp {
+  0%   { opacity: 0; -moz-transform: translateY(60px); }
+  100% { opacity: 1; -moz-transform: translateY(0px); }
 }
 
 @-webkit-keyframes shiftUp {
-  from {
-    -webkit-transform: translateY(60px);
-  }
-  to {
-    -webkit-transform: translateY(0px);
-  }
+  0%   { opacity: 0; -webkit-transform: translateY(60px); }
+  100% { opacity: 1; -webkit-transform: translateY(0px); }
 }
 
 @keyframes shiftDown {
-  from {
-    transform: translateY(-60px);
-  }
-  to {
-    transform: translateY(0px);
-  }
+  0%   { opacity: 0; transform: translateY(-60px); }
+  100% { opacity: 1; transform: translateY(0px); }
+}
+
+@-moz-keyframes shiftDown {
+  0%   { opacity: 0; -moz-transform: translateY(-60px); }
+  100% { opacity: 1; -moz-transform: translateY(0px); }
 }
 
 @-webkit-keyframes shiftDown {
-  from {
-    -webkit-transform: translateY(-60px);
-  }
-  to {
-    -webkit-transform: translateY(0px);
-  }
+  0%   { opacity: 0; -webkit-transform: translateY(-60px); }
+  100% { opacity: 1; -webkit-transform: translateY(0px); }
 }
