Hide the more arrow on short screens bcuz lazy

--- a/css/styles.css
+++ b/css/styles.css
@@ -195,6 +195,12 @@ a {
       color: #fff;
     }
 
+    @media only screen and (max-height: 500px) {
+      #header__more {
+        display: none;
+      }
+    }
+
 .error #header {
   background: #2d393d !important;
 }
