--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ a {
 }
 
 #header {
-  background: #c3c3c3 url(../img/hero.jpg) no-repeat center center / cover;
+  background: #96b5c9 url(../img/hero.jpg) no-repeat center center / cover;
   color: #fff;
   display: table;
   height: 100%;
