--- a/css/styles.css
+++ b/css/styles.css
@@ -43,11 +43,11 @@ h3 {
 }
 
 h4 {
-  color: #444;
   background: -webkit-linear-gradient(#000,#999);
   background-size: cover;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  color: #444;
   font-size: 2.75em;
   font-weight: 200;
   line-height: 1.3em;
@@ -97,6 +97,7 @@ a {
   color: #fff;
   display: table;
   height: 100%;
+  height: 100vh;
   margin: 0 auto;
   overflow: hidden;
   padding-bottom: 4em;
