--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,5 +4,5 @@
   <p id="footer__copyright">Made in Canada</p>
 </footer>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/script.min.js"></script>
+{% javascript jquery %}
+{% javascript script %}
