More content and styling

--- a/_harp/_layout.ejs
+++ b/_harp/_layout.ejs
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
+
     <title>Eugene Cheung</title>
-    <link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" type="image/png" href="/images/icon.png">
 </head>
@@ -13,7 +16,8 @@
 
     <footer class="footer">
         <div class="container">
-            <p>Made in Canada</p>
+            <a class="btn-pill" href="mailto:ey.cheung@outlook.com">Email me</a>
+            <p class="footer__fin">Made in Canada</p>
         </div>
     </footer>
 </body>
