--- a/_harp/index.ejs
+++ b/_harp/index.ejs
@@ -10,13 +10,36 @@
             <a href="https://www.linkedin.com/in/arkon94">LinkedIn</a>
             <a href="https://github.com/arkon">GitHub</a>
             <a href="http://www.dribbble.com/arkon">Dribbble</a>
+            <a href="mailto:ey.cheung@outlook.com">Email</a>
         </div>
     </div>
+
+    <p class="header__bgtext">Developer + Designer</p>
+    <a class="header__more" href="#home-content" title="Learn more">↓</a>
 </header>
 
-<section class="content">
+<section class="content" id="home-content">
     <div class="container">
-        <h1>Content goes here</h1>
-        <p>Stuff</p>
+        <h1>Hi, I like creating things.</h1>
+        <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in Computer Science. I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations ever since. </p>
+
+        <h2>Work</h2>
+
+        <div class="portfolio">
+            <div class="portfolio__item">
+            </div>
+            <div class="portfolio__item">
+            </div>
+            <div class="portfolio__item">
+            </div>
+            <div class="portfolio__item">
+            </div>
+            <div class="portfolio__item">
+            </div>
+            <div class="portfolio__item">
+            </div>
+        </div>
+
+        <h2>Lab</h2>
     </div>
 </section>
