--- a/_harp/css/_animations.scss
+++ b/_harp/css/_animations.scss
@@ -19,3 +19,25 @@
         transform: translateX(0);
     }
 }
+
+@keyframes anim-slide-up {
+    0% {
+        opacity: 0;
+        transform: translateY(100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes anim-slide-down {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
